新增：刀具查找功能（根据型号、类型、设备编号、刀位、寿命状态） 修改：service层cutterServiceImpl的一个bug；登录页图片bug

--- a/src/main/resources/templates/addCutter.html
+++ b/src/main/resources/templates/addCutter.html
@@ -119,8 +119,8 @@
                                                 <label for="Input12">寿命状态</label>
                                                 <select class="form-control" id="Input12" name="lifeState">
                                                     <option>正常</option>
-                                                    <option>预警</option>
                                                     <option>警告</option>
+                                                    <option>报警</option>
                                                 </select>
                                             </div>
 
