--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,24 +47,24 @@
                                                 <span id="msg" style="font-size: 12px;color: red"></span>
                                             </div>
 
-                                            <div class="custom-control custom-checkbox"><input type="checkbox"
-                                                                                               class="custom-control-input"
-                                                                                               id="customControlInline"><label
-                                                    class="custom-control-label" for="customControlInline">记住密码</label></div>
+<!--                                            <div class="custom-control custom-checkbox"><input type="checkbox"-->
+<!--                                                                                               class="custom-control-input"-->
+<!--                                                                                               id="customControlInline"><label-->
+<!--                                                    class="custom-control-label" for="customControlInline">记住密码</label></div>-->
                                             <div class="mt-4 text-center">
                                                 <button class="btn btn-primary w-md waves-effect waves-light"
                                                         type="button" id="loginBtn">登录
                                                 </button>
                                             </div>
-                                            <div class="mt-4 text-center"><a href="auth-recoverpw.html"
-                                                                             class="text-muted"><i
-                                                    class="mdi mdi-lock mr-1"></i>忘记密码?</a></div>
+<!--                                            <div class="mt-4 text-center"><a href="auth-recoverpw.html"-->
+<!--                                                                             class="text-muted"><i-->
+<!--                                                    class="mdi mdi-lock mr-1"></i>忘记密码?</a></div>-->
                                         </form>
                                     </div>
-                                    <div class="mt-5 text-center"><p>还没有账户 ? <a
-                                            href="auth-register.html"
-                                            class="font-weight-medium text-primary">注册 </a></p>
-                                    </div>
+<!--                                    <div class="mt-5 text-center"><p>还没有账户 ? <a-->
+<!--                                            href="auth-register.html"-->
+<!--                                            class="font-weight-medium text-primary">注册 </a></p>-->
+<!--                                    </div>-->
                                 </div>
                             </div>
                         </div>
@@ -72,8 +72,8 @@
                 </div>
             </div>
             <div class="col-lg-8">
-                <div class="authentication-bg">
-                    <div class="bg-overlay"></div>
+                <div class="authentication-bg" style="background-color: #7c2f6647">
+                    <div class="bg-overlay" style="background-color: #7c2f6647"></div>
                 </div>
             </div>
         </div>
