--- a/src/main/resources/templates/searchPage/cutterShow.html
+++ b/src/main/resources/templates/searchPage/cutterShow.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>工业大数据平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="This is an industrial big data platform page" name="description" />
-    <link rel="shortcut icon" href="../static/images/favicon.ico"><!-- jquery.vectormap css -->
-    <link href="../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" /><!-- DataTables -->
-    <link href="../static/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" /><!-- Responsive datatable examples -->
-    <link href="../static/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" /><!-- Bootstrap Css -->
-    <link href="../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" /><!-- Icons Css -->
-    <link href="../static/css/icons.min.css" rel="stylesheet" type="text/css" /><!-- App Css-->
-    <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
-    <link href="../static/css/diy.css" rel="stylesheet" type="text/css"/>
+    <meta content="This is an industrial big data platform page" name="description"/>
+    <link rel="shortcut icon" href="../../static/images/favicon.ico"><!-- jquery.vectormap css -->
+    <link href="../../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet"
+          type="text/css"/><!-- DataTables -->
+    <link href="../../static/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet"
+          type="text/css"/>
+    <!-- Responsive datatable examples -->
+    <link href="../../static/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet"
+          type="text/css"/><!-- Bootstrap Css -->
+    <link href="../../static/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css"/>
+    <!-- Icons Css -->
+    <link href="../../static/css/icons.min.css" rel="stylesheet" type="text/css"/><!-- App Css-->
+    <link href="../../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
+    <link href="../../static/css/diy.css" rel="stylesheet" type="text/css"/>
     <!--    <script src="../static/js/echarts.js"></script>-->
 </head>
 
@@ -29,7 +34,8 @@
             <div class="container-fluid"><!-- start page title -->
                 <div class="row">
                     <div class="col-12">
-                        <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px"><h4 class="mb-0">
+                        <div class="page-title-box d-flex align-items-center justify-content-between"
+                             style="margin-bottom: -20px"><h4 class="mb-0">
                             刀具信息</h4>
                             <!--          无用的右侧标题                  -->
                             <!--                            <div class="page-title-right">-->
@@ -47,15 +53,14 @@
                     <div class="col-lg-12">
                         <div class="row m-0" style="height: 34px">
                             <div class="button-items">
-                                <button type="button" class="btn btn-primary waves-effect waves-light"><a class="text-white" th:href="@{/addCutter}">新增刀具
+                                <button type="button" class="btn btn-primary waves-effect waves-light"><a
+                                        class="text-white" th:href="@{/addCutter}">新增刀具
                                 </a></button>
-
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/}">根据刀具型号查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/}">根据刀具类型查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/}">根据设备编号查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/}">根据刀具刀位查找 </a></button>
-                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/}">根据寿命状态查找 </a></button>
-
+                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterType}">根据刀具型号查找 </a></button>
+                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterCategory}">根据刀具类型查找 </a></button>
+                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byDeviceId}">根据设备编号查找 </a></button>
+                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byCutterLocation}">根据刀具刀位查找 </a></button>
+                                <button type="button" class="btn btn-info waves-effect waves-light"><a class="text-white" th:href="@{/byLifeState}">根据寿命状态查找 </a></button>
 
                             </div>
 
@@ -90,11 +95,12 @@
                                         </tr>
                                         </thead>
 
-                                        <tbody th:each="item:${cutterList}" >
+                                        <tbody th:each="item:${cutterLists1}">
                                         <div th:switch="${item.getLifeState()}">
                                             <tr th:case="警告" class="btn-warning">
-                                                <td> <span class="btn btn-sm btn-danger"><a
-                                                        th:href="@{/deleteCutter/}+${item.getCutterId()}" class="text-white border-warning">删除</a></span></td>
+                                                <td class="bg-white"> <span class="btn btn-sm btn-danger"><a
+                                                        th:href="@{/deleteCutter/}+${item.getCutterId()}"
+                                                        class="text-white border-warning">删除</a></span></td>
                                                 <td th:text="${item.getCutterId()}">x</td>
                                                 <td th:text="${item.getCutterCategory()}">x</td>
                                                 <td th:text="${item.getCutterType()}">x</td>
@@ -113,9 +119,10 @@
                                                 <td th:text="${item.getResidualLife()}">x</td>
                                                 <td th:text="${item.getAlarmValue()}">x</td>
                                             </tr>
-                                            <tr  th:case="报警" class="btn-danger">
-                                                <td> <span class="btn btn-sm btn-danger"><a
-                                                        th:href="@{/deleteCutter/}+${item.getCutterId()}" class="text-white border-warning">删除</a></span></td>
+                                            <tr th:case="报警" class="btn-danger">
+                                                <td class="bg-white"> <span class="btn btn-sm btn-danger"><a
+                                                        th:href="@{/deleteCutter/}+${item.getCutterId()}"
+                                                        class="text-white border-warning">删除</a></span></td>
                                                 <td th:text="${item.getCutterId()}">x</td>
                                                 <td th:text="${item.getCutterCategory()}">x</td>
                                                 <td th:text="${item.getCutterType()}">x</td>
@@ -134,9 +141,10 @@
                                                 <td th:text="${item.getResidualLife()}">x</td>
                                                 <td th:text="${item.getAlarmValue()}">x</td>
                                             </tr>
-                                            <tr  th:case="*" class="">
-                                                <td> <span class="btn btn-sm btn-danger"><a
-                                                        th:href="@{/deleteCutter/}+${item.getCutterId()}" class="text-white border-warning">删除</a></span></td>
+                                            <tr th:case="*" class="">
+                                                <td class="bg-white"> <span class="btn btn-sm btn-danger"><a
+                                                        th:href="@{/deleteCutter/}+${item.getCutterId()}"
+                                                        class="text-white border-warning">删除</a></span></td>
                                                 <td th:text="${item.getCutterId()}">x</td>
                                                 <td th:text="${item.getCutterCategory()}">x</td>
                                                 <td th:text="${item.getCutterType()}">x</td>
@@ -165,53 +173,23 @@
                     </div>
                 </div><!-- end row -->
 
-                <div class="col-12">
-                    <div class="page-title-box d-flex align-items-center justify-content-between" style="margin-bottom: -20px"><h4 class="mb-0">
-                        刀具汇总</h4>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card">
-                            <span class="btn-warning   ri-file-warning-line" style="font-size: larger;color: white;margin: 10px;text-align: center">&nbsp;刀具警告数量：<span style="font-size: x-large" th:text="${sum_warnings}"></span></span>
-                            <p style="margin: 10px">警告编号：</p>
-                            <ul th:each="warning:${warnings}">
-                                <li style="height: 5px" th:text="${warning}"></li>
-                            </ul>
-                            <p></p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card">
-                            <span class="btn-danger  ri-file-warning-fill" style="font-size: larger;color: white;margin: 10px;text-align: center">&nbsp;刀具报警数量：<span style="font-size: x-large" th:text="${sum_aralms}"></span></span>
-                            <p style="margin: 10px">报警编号：</p>
-                            <ul th:each="aralm:${aralms}">
-                                <li style="height: 5px" th:text="${aralm}"></li>
-                            </ul>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
             </div><!-- container-fluid --></div><!-- End Page-content -->
-    </div></div>
-<script src="../static/libs/jquery/jquery.min.js"></script>
-<script src="../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../static/libs/metismenu/metisMenu.min.js"></script>
-<script src="../static/libs/simplebar/simplebar.min.js"></script>
-<script src="../static/libs/node-waves/waves.min.js"></script><!-- apexcharts -->
-<script src="../static/libs/apexcharts/apexcharts.min.js"></script><!-- jquery.vectormap map -->
-<script src="../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
-<script src="../static/libs/admin-resources/jquery.vectormap/maps/jquery-jvectormap-us-merc-en.js"></script><!-- Required datatable js -->
-<script src="../static/libs/datatables.net/js/jquery.dataTables.min.js"></script>
-<script src="../static/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script><!-- Responsive examples -->
-<script src="../static/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-<script src="../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
-<script src="../static/js/pages/dashboard.init.js"></script>
-<script src="../static/js/app.js"></script>
+    </div>
+</div>
+<script src="../../static/libs/jquery/jquery.min.js"></script>
+<script src="../../static/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../static/libs/metismenu/metisMenu.min.js"></script>
+<script src="../../static/libs/simplebar/simplebar.min.js"></script>
+<script src="../../static/libs/node-waves/waves.min.js"></script><!-- apexcharts -->
+<script src="../../static/libs/apexcharts/apexcharts.min.js"></script><!-- jquery.vectormap map -->
+<script src="../../static/libs/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
+<script src="../../static/libs/admin-resources/jquery.vectormap/maps/jquery-jvectormap-us-merc-en.js"></script>
+<!-- Required datatable js -->
+<script src="../../static/libs/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="../../static/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script><!-- Responsive examples -->
+<script src="../../static/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+<script src="../../static/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+<script src="../../static/js/pages/dashboard.init.js"></script>
+<script src="../../static/js/app.js"></script>
 </body>
 </html>
