--- a/src/main/resources/templates/productionplan.html
+++ b/src/main/resources/templates/productionplan.html
@@ -42,38 +42,30 @@
                         </div>
                     </div>
                 </div><!-- end page title -->
-<!--    查询            -->
-<!--                <div class="row">-->
-<!--                    <div class="col-lg-12">-->
-<!--                        <div class="card">-->
-<!--                            <div class="card-body  pt-0">-->
-<!--                                <span class="nav-link font-weight-bold p-3">查询区域</span>-->
-<!--                                <div class="row">-->
-<!--                                    <form class="form-inline">-->
-<!--                                        <div class="form-group">-->
-<!--                                            <label for="exampleInputName2">Name</label>-->
-<!--                                            <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">-->
-<!--                                        </div>-->
-<!--                                        <div class="form-group">-->
-<!--                                            <label for="exampleInputEmail2">Email</label>-->
-<!--                                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">-->
-<!--                                        </div>-->
-<!--                                        <button type="submit" class="btn btn-default">Send invitation</button>-->
-<!--                                    </form>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--    查询结束            -->
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body  pt-0">
-                                <ul class="nav nav-tabs nav-tabs-custom mb-4">
-                                    <li class="nav-item"><a class="nav-link font-weight-bold p-3 active">生产计划列表</a></li>
-                                    </li>
-                                </ul>
+                                <div class="row">
+<!--                                    查询-->
+                                    <form class="form-inline ml-3 mt-2 mr-5" method="post" action="/productionplan">
+                                        <div class="form-group mr-2">
+                                            <label for="startTime" class="mr-1">计划开始时间</label>
+                                            <input type="datetime-local" class="form-control" id="startTime" placeholder="2022-01-01" name="startTime">
+                                        </div>
+                                        <div class="form-group ml-2 mr-2">
+                                            <label for="endTime" class="mr-1">计划结束时间</label>
+                                            <input type="datetime-local" class="form-control" id="endTime" placeholder="2022-01-01" name="endTime">
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">查询</button>
+                                    </form>
+<!--                                    查询-->
+                                    <div class="mt-2 ml-5" style="float: right">
+                                        <a class="btn btn-primary text-white" th:href="@{/addPlan}" role="button">新建生产计划</a>
+                                    </div>
+
+                                </div>
+
                                 <div class="table-responsive">
                                     <table class="table table-centered datatable dt-responsive nowrap "
                                            style="border-collapse: collapse; border-spacing: 0; width: 100%;">
@@ -99,10 +91,10 @@
                                         <tr>
                                             <td th:text="${item.getOperation()}">x</td>
                                             <td th:text="${item.getPlanNumber()}">x</td>
-                                            <td th:text="${item.getPlanNumber()}">x</td>
+                                            <td th:text="${item.getPlanName()}">x</td>
                                             <td th:text="${item.getState()}">x</td>
                                             <td th:text="${item.getDevicegroup()}">x</td>
-                                            <td th:text="${item.getPlanNumber()}">x</td>
+                                            <td th:text="${item.getPlanYield()}">x</td>
                                             <td th:text="${item.getQualifiedYield()}">x</td>
                                             <td th:text="${item.getDisqualifiedYield()}">x</td>
                                             <td th:text="${item.getPlanDetails()}">x</td>
