--- a/src/main/resources/templates/productionplan.html
+++ b/src/main/resources/templates/productionplan.html
@@ -51,11 +51,11 @@
                                     <form class="form-inline ml-3 mt-2 mr-5" method="post" action="/productionplan">
                                         <div class="form-group mr-2">
                                             <label for="startTime" class="mr-1">计划开始时间</label>
-                                            <input type="datetime-local" class="form-control" id="startTime" placeholder="2022-01-01" name="startTime">
+                                            <input type="datetime-local" class="form-control" id="startTime" name="startTime">
                                         </div>
                                         <div class="form-group ml-2 mr-2">
                                             <label for="endTime" class="mr-1">计划结束时间</label>
-                                            <input type="datetime-local" class="form-control" id="endTime" placeholder="2022-01-01" name="endTime">
+                                            <input type="datetime-local" class="form-control" id="endTime" name="endTime">
                                         </div>
                                         <button type="submit" class="btn btn-primary">查询</button>
                                     </form>
